--- a/html/1_基础标签.html
+++ b/html/1_基础标签.html
@@ -22,7 +22,6 @@
         <p>我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字</p>
         <p>我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字</p>
         哈哈哈哈哈哈哈
-
         <!-- 图片  
             src图片路径   alt图片加载不出来 显示alt中的内容  title 鼠标划入文字介绍
             相对路径 上层路径../   下层/ 
@@ -32,6 +31,43 @@
         <img src="https://i.ahj.cm//shop/textures/05428267629393397.jpg" alt="">
         <img src="images/111.png" alt="我是百度logo图片" >
         <img src="../images2/2.jpg" alt="" title="山水">
+        <!-- 超链接  href跳转地址  target="_blank" 打开新窗口-->
+        <a href="http://www.baidu.com">百度</a>
+        <a href="2_test.html" target="_blank">test2</a>
+        <!-- 无序列表 -->
+        <ul>
+            <li>111</li>
+            <li>222</li>
+            <li>333</li>
+        </ul>
+        <!-- 有序列表 -->
+        <ol>
+            <li>111</li>
+            <li>222</li>
+            <li>333</li>
+        </ol>
+
+        <!--布局 DIV+CSS -->
+        <div>我是div，<strong>商品</strong>xsfdsfhhdf 价格<span style="color: red;">34</span>给对方和<i>环境</i>规划局</div>
+        <div>我是div</div>
+        <!-- span  -->
+        <span>我是span</span>
+        <span>我是span</span>
+        <!-- 
+            行级元素  行级元素多个占一行 
+            块级元素  自己占一行
+         -->
+
+
+
+
+
+
+
+
+
+
+
 
     </body>
 </html>
