--- a/css/4_css基本样式.html
+++ b/css/4_css基本样式.html
@@ -12,11 +12,11 @@
         div{
             width:800px;
             height: 500px;
-            /* background-color:red ;
-            background-image: url(../images2/2.jpg);
+            background-color:red ;
+            /* background-image: url(../images2/2.jpg);
             background-repeat: no-repeat;
-            background-position: 100px 50px; */
-            background: red url(../images2/2.jpg) no-repeat 100px 50px ;
+            background-position: 100px 50px; */ 
+            /* background: red url(../images2/2.jpg) no-repeat 100px 50px ; */
             /* 字体 */
             /* 浏览器默认的字体大小 16 */
             font-size: 16px;
@@ -28,13 +28,31 @@
             /* 文字颜色 */
             color:green;
             /* Helvetica Neue,Helvetica,Arial,Microsoft Yahei,Hiragino Sans GB,Heiti SC,WenQuanYi Micro Hei,sans-serif; */
+            /* 文本相关 */
+            /* 水平居中 left center right */
+            text-align: center;
+            /* 当行文本垂直对齐  */
+            line-height: 500px;
+
+        }
+        p{
+            background: red;
+            /* 文本首行缩进 */
+            text-indent: 30px;
+           
+        }
+        a{
+            /* 文本装饰 none underline overline  line-through*/
+            /* text-decoration: none; */
+            text-decoration:line-through;
         }
     </style>
 </head>
-<body>
+<body style="height: 2000px;">
     <div>
         我是DIV 哈哈哈哈
     </div>
-
+    <p>hald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈</p>
+    <a href="#">百度</a>
 </body>
 </html>
