--- a/12月13补课/1_html基础元素.html
+++ b/12月13补课/1_html基础元素.html
@@ -19,7 +19,7 @@
         <h5>标题</h5>
         <h6>标题</h6>
         <!-- 段落 -->
-        <p>我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字</p>
+        <p>我是一段</p>
         <p>我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字</p>
         <!-- 超链接  target="_blank" 打开新窗口-->
         <a href="http://www.baidu.com" target="_blank">百度</a>
@@ -43,8 +43,15 @@
             <li>222</li>
             <li>333</li>
         </ol>
-        
-
+        <!-- 区块 布局DIV+CSS -->
+        <div>我是div元素</div>
+        我是div元素
+        <!--
+            行元素  多个占一行  a span string i 
+            块元素  自己占一行  h1-h6  p ul li ol
+        -->
+        <span>我是span</span>
+        <p>我是一段文字<span style="color:red">我是一段文字</span>我是一段文字<i>哈哈哈哈哈</i>文字我是一段文字<strong>呵呵呵呵呵</strong>我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字我是一段文字</p>
 
     </body>
 </html>
