--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -11,5 +11,31 @@
 </head>
 <body>
     <div class="banner"></div>
+    <!-- nav 通栏显示 -->
+    <div class="nav">
+        <!-- 居中 -->
+        <div class="nav-content">
+            <ul class="nav-left">
+                <li><a href="#">小米商城</a></li>
+                <li><a href="#">MIUI</a></li>
+                <li><a href="#">IoT</a></li>
+                <li><a href="#">云服务</a></li>
+                <li><a href="#">天星数科</a></li>
+                <li><a href="#">有品</a></li>
+                <li><a href="#">小爱开放平台</a></li>
+                <li><a href="#">企业团购</a></li>
+                <li><a href="#">资质证照</a></li>
+                <li><a href="#">协议规则</a></li>
+                <li><a href="#">下载App</a></li>
+                <li><a href="#">智能生活</a></li>
+                <li class="left-last"><a href="#">Select Location</a></li>
+            </ul>
+            <ul class="nav-right">
+                <li><a href="#">登录</a></li>
+                <li><a href="#">注册</a></li>
+                <li><a href="#">消息通知</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
