--- a/12月30课程/2_html基础标签.html
+++ b/12月30课程/2_html基础标签.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="height:2000px">
     <!-- 标题 -->
     <h1>标题</h1>
     <h2>标题</h2>
@@ -58,7 +58,18 @@
     <span>我是span</span>
 
     
-
+     <table border="1" cellpadding="2" cellspacing="0">
+         <tr>
+             <td>姓名</td>
+             <td>年龄</td>
+             <td>学校</td>
+         </tr>
+         <tr>
+            <td>张三</td>
+            <td>18</td>
+            <td>xxx</td>
+        </tr>
+     </table>
 </body>
 
 </html>
