--- a/12月30课程/css/4_行级元素块级元素.html
+++ b/12月30课程/css/4_行级元素块级元素.html
@@ -15,8 +15,12 @@
             background: blue;
             width:200px;
             height:200px;
+            font-size:16px;
             /* display: inline-block; */
-            display: none;
+            /* display: none; */
+        }
+        body{
+            font-size:0;
         }
     </style>
 </head>
@@ -30,7 +34,7 @@
         input button
      -->
     <div>hhhh</div>
-    <span>aaa</span> <span>aaa</span>
-     
+    <span>aaa</span><span>aaa</span>
+
 </body>
 </html>
