--- a/12月30课程/css/7_盒模型应用.html
+++ b/12月30课程/css/7_盒模型应用.html
@@ -17,7 +17,7 @@
             background: red;
             display: inline-block;
             padding:0 10px;
-            box-sizing: border-box;
+            /* box-sizing: border-box; */
         }
     </style>
 
@@ -27,7 +27,7 @@
     <div id="div1">
         <div>1111111</div><div style="background:blue">2222222222</div>
     </div>
-
+    
 </body>
 
 </html>
