--- a/css/4_css基本样式.html
+++ b/css/4_css基本样式.html
@@ -46,6 +46,12 @@
             /* text-decoration: none; */
             text-decoration:line-through;
         }
+        ul{
+            list-style: none;
+        }
+        input{
+            outline: none;
+        }
     </style>
 </head>
 <body style="height: 2000px;">
@@ -54,5 +60,6 @@
     </div>
     <p>hald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈ald哈哈哈哈哈哈哈哈哈哈</p>
     <a href="#">百度</a>
+    <input type="text">
 </body>
 </html>
