--- a/css/5_display.html
+++ b/css/5_display.html
@@ -9,7 +9,7 @@
             background: red;
             width: 200px;
             height: 200px;
-            display: inline;
+            /* display: inline; */
         }
         span{
             background: green;
@@ -30,7 +30,7 @@
         display:inline(行级元素) |block(块级元素)|inline-block(行级块元素)|none(隐藏)
 
      -->
-    <div id="div1">haha</div>
+    <div igd="div1">haha</div>
     <span>hehe</span>
     <span>hehe</span>
     
