--- a/css/9_css盒模型2.html
+++ b/css/9_css盒模型2.html
@@ -17,7 +17,7 @@
         }
         /* 
         标准盒模型
-            width属性（200） 内容
+            width属性（200） 内容element
         怪异盒模型（当ie6及ie6以下的浏览器  不写doctype）
             width属性  内容+padding+border
             box-sizing:border-box(怪异盒模)
