--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,12 @@
     <!-- 页面级样式 -->
     <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
-    <div class="banner"></div>
+    <!-- <div class="banner"></div> -->
     <!-- nav 通栏显示 -->
     <div class="nav">
-        <!-- 居中 -->
-        <div class="nav-content">
+        <div class="wrapper">
             <ul class="nav-left">
                 <li><a href="#">小米商城</a></li>
                 <li><a href="#">MIUI</a></li>
@@ -28,7 +29,7 @@
                 <li><a href="#">协议规则</a></li>
                 <li><a href="#">下载App</a></li>
                 <li><a href="#">智能生活</a></li>
-                <li class="left-last"><a href="#">Select Location</a></li>
+                <li><a href="#">Select Location</a></li>
             </ul>
             <ul class="nav-right">
                 <li><a href="#">登录</a></li>
@@ -38,4 +39,5 @@
         </div>
     </div>
 </body>
+
 </html>
