--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>首页</title>
-    <!-- 公共的样式 -->
+    <!-- 公共的样式 样式重置 -->
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="font/iconfont.css">
     <!-- 页面级样式 -->
     <link rel="stylesheet" href="css/index.css">
+
 </head>
 
 <body>
@@ -31,10 +33,18 @@
                 <li><a href="#">智能生活</a></li>
                 <li><a href="#">Select Location</a></li>
             </ul>
+            <!-- 使用字体图标 
+            1 引入iconfont.css文件
+            2 
+        -->
             <ul class="nav-right">
                 <li><a href="#">登录</a></li>
                 <li><a href="#">注册</a></li>
                 <li><a href="#">消息通知</a></li>
+                <li class="cart">
+                    <span class="iconfont icon-gouwuche"></span>
+                    购物车（0）
+                </li>
             </ul>
         </div>
     </div>
