--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -44,6 +44,7 @@
                 <li class="cart">
                     <span class="iconfont icon-gouwuche"></span>
                     购物车（0）
+                    <div class="cart-list"></div>
                 </li>
             </ul>
         </div>
