--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -49,6 +49,17 @@
             </ul>
         </div>
     </div>
+    <!-- header -->
+    <div class="center-box header-box">
+        <div class="header-logo">
+            <img src="images/mi-logo.png" alt="">
+        </div>
+        <ul class="header-list">
+            <li>小米手机</li>
+        </ul>
+        <div class="search">搜索</div>
+    </div>
+
 </body>
 
 </html>
