--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -51,13 +51,23 @@
     </div>
     <!-- header -->
     <div class="center-box header-box">
-        <div class="header-logo">
+        <div class="logo-box">
             <img src="images/mi-logo.png" alt="">
         </div>
-        <ul class="header-list">
-            <li>小米手机</li>
+        <ul class="menu-box">
+            <li><a href="#">小米手机</a></li>
+            <li><a href="#">RedMI红米</a></li>
+            <li><a href="#">电视</a></li>
+            <li><a href="#">笔记本</a></li>
+            <li><a href="#">家电</a></li>
+            <li><a href="#">路由器</a></li>
+            <li><a href="#">智能硬件</a></li>
+            <li><a href="#">服务</a></li>
+            <li><a href="#">社区</a></li>
         </ul>
-        <div class="search">搜索</div>
+        <div class="search-box">
+            <input type="text">
+        </div>
     </div>
 
 </body>
