--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -66,7 +66,10 @@
             <li><a href="#">社区</a></li>
         </ul>
         <div class="search-box">
-            <input type="text">
+            <input type="text" placeholder="请输入搜索名称">
+            <a class="search-btn" href="#">
+                <span class="iconfont icon-sousuo"></span>
+            </a>
         </div>
     </div>
 
