--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -72,6 +72,17 @@
             </a>
         </div>
     </div>
+    <!-- 轮播图 -->
+    <div class="center-box slide-box">
+        <!-- 装图片的容器 -->
+        <div class="img-box">
+            <img src="images/img02.webp" alt="">
+        </div>
+        <!-- 左侧分类容器 -->
+        <div class="cate-box">
+            
+        </div>
+    </div>
 
 </body>
 
