--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -80,7 +80,55 @@
         </div>
         <!-- 左侧分类容器 -->
         <div class="cate-box">
-            
+            <ul class="cate-list">
+                <li class="main-menu">
+                    手机 电话卡
+                    <span class="iconfont icon-dayuhao"></span>
+                    <ul class="sub-menu-box">
+                        <li class="sub-menu">11</li>
+                    </ul>
+                </li>
+                <li class="main-menu">电视 盒子
+                    <span class="iconfont icon-dayuhao"></span>
+                    <ul class="sub-menu-box">
+                        <li class="sub-menu">22</li>
+                    </ul>
+                </li>
+                <li class="main-menu">笔记本 显示器
+                    <span class="iconfont icon-dayuhao"></span>
+                    <ul class="sub-menu-box">
+                        <li class="sub-menu">3333</li>
+                    </ul>
+                </li>
+                <li class="main-menu">
+                    出行 穿戴
+                    <span class="iconfont icon-dayuhao"></span>
+                </li>
+                <li class="main-menu">
+                    家电 插线板
+                    <span class="iconfont icon-dayuhao"></span>
+                </li>
+                <li class="main-menu">
+                    智能 路由器
+                    <span class="iconfont icon-dayuhao"></span>
+                </li>
+                <li class="main-menu">
+                    电源 配件
+                    <span class="iconfont icon-dayuhao"></span>
+                </li>
+                <li class="main-menu">
+                    健康 儿童
+                    <span class="iconfont icon-dayuhao"></span>
+                </li>
+                <li class="main-menu">
+                    耳机 音响
+                    <span class="iconfont icon-dayuhao"></span>
+                </li>
+                <li class="main-menu">
+                    生活 箱包
+                    <span class="iconfont icon-dayuhao"></span>
+                </li>
+            </ul>
         </div>
     </div>
 
