--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -84,21 +84,60 @@
                 <li class="main-menu">
                     手机 电话卡
                     <span class="iconfont icon-dayuhao"></span>
-                    <ul class="sub-menu-box">
-                        <li class="sub-menu">11</li>
-                    </ul>
+                    <div class="sub-menu-box">
+                        <ul>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                        </ul>
+                    </div>
+
                 </li>
                 <li class="main-menu">电视 盒子
                     <span class="iconfont icon-dayuhao"></span>
-                    <ul class="sub-menu-box">
-                        <li class="sub-menu">22</li>
-                    </ul>
+                    <!-- <ul class="sub-menu-box">
+                        <li class="sub-menu">
+                            <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                            <span class="sub-text">小米12</span>
+                        </li>
+                        <li class="sub-menu">
+                            <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                            <span class="sub-text">小米12</span>
+                        </li>
+                        <li class="sub-menu">
+                            <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                            <span class="sub-text">小米13</span>
+                        </li>
+                    </ul> -->
                 </li>
                 <li class="main-menu">笔记本 显示器
                     <span class="iconfont icon-dayuhao"></span>
-                    <ul class="sub-menu-box">
+                    <!-- <ul class="sub-menu-box">
                         <li class="sub-menu">3333</li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li class="main-menu">
                     出行 穿戴
