--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -113,6 +113,34 @@
                                 <span class="sub-text">小米11</span>
                             </li>
                         </ul>
+                        <ul>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                            <li class="sub-menu">
+                                <img class="sub-img" src="images/sub-menu01.webp" alt="">
+                                <span class="sub-text">小米11</span>
+                            </li>
+                        </ul>
                     </div>
 
                 </li>
@@ -169,6 +197,35 @@
                 </li>
             </ul>
         </div>
+    </div>
+    <div class="center-box channel-box">
+        <ul class="channel-left">
+            <li>
+                <img class="left-img" src="images/channel01.png" alt="">
+                <span class="left-text">小米秒杀</span>
+            </li>
+            <li>
+                <img class="left-img" src="images/channel02.png" alt="">
+                <span  class="left-text">企业团购</span>
+            </li>
+            <li>
+                <img class="left-img" src="images/channel02.png" alt="">
+                <span  class="left-text">F码通道</span>
+            </li>
+            <li>
+                <img class="left-img" src="images/channel02.png" alt="">
+                <span  class="left-text">米粉卡</span>
+            </li>
+            <li>
+                <img class="left-img" src="images/channel02.png" alt="">
+                <span  class="left-text">以旧换新</span>
+            </li>
+            <li>
+                <img class="left-img" src="images/channel02.png" alt="">
+                <span  class="left-text">话费充值</span>
+            </li>
+        </ul>
+
     </div>
 
 </body>
