频道页 右边

--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -206,25 +206,36 @@
             </li>
             <li>
                 <img class="left-img" src="images/channel02.png" alt="">
-                <span  class="left-text">企业团购</span>
+                <span class="left-text">企业团购</span>
             </li>
             <li>
                 <img class="left-img" src="images/channel02.png" alt="">
-                <span  class="left-text">F码通道</span>
+                <span class="left-text">F码通道</span>
             </li>
             <li>
                 <img class="left-img" src="images/channel02.png" alt="">
-                <span  class="left-text">米粉卡</span>
+                <span class="left-text">米粉卡</span>
             </li>
             <li>
                 <img class="left-img" src="images/channel02.png" alt="">
-                <span  class="left-text">以旧换新</span>
+                <span class="left-text">以旧换新</span>
             </li>
             <li>
                 <img class="left-img" src="images/channel02.png" alt="">
-                <span  class="left-text">话费充值</span>
+                <span class="left-text">话费充值</span>
             </li>
         </ul>
+        <div class="channel-right">
+            <a href="#">
+                <img src="images/img3.jpg" alt="">
+            </a>
+            <a href="#">
+                <img src="images/img04.jpg" alt="">
+            </a>
+            <a href="#">
+                <img src="images/img05.jpg" alt="">
+            </a>
+        </div>
 
     </div>
 
