--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -238,7 +238,26 @@
         </div>
 
     </div>
+    <!-- 闪购 -->
+    <div class="main-content">
+        <div class="center-box">
+            <!-- 标题 -->
+            <div class="sale-header-box">
+                <h2 class="flashsale-header">小米闪购</h2>
+                <div class="btn-box">
+                    <span class="iconfont icon-xiaoyuhao"></span><span class="iconfont icon-dayuhao"></span>
+                </div>
 
+            </div>
+            <!-- 内容 -->
+            <div>
+
+            </div>
+
+        </div>
+    
+    </div>
+    
 </body>
 
 </html>
