--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -238,8 +238,9 @@
         </div>
 
     </div>
-    <!-- 闪购 -->
+    <!--设置背景-->
     <div class="main-content">
+        <!-- 居中 -->
         <div class="center-box">
             <!-- 标题 -->
             <div class="sale-header-box">
@@ -252,7 +253,7 @@
             <div class="sale-content clearfix">
                 <div class="sale-time">
                     <div class="start-time">14:00 场</div>
-                    <img  class="sale-img" src="data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAA1CAYAAAAklDnhAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJ
+                    <img class="sale-img" src="data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAACIAAAA1CAYAAAAklDnhAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJ
                     bWFnZVJlYWR5ccllPAAAAyNpVFh0WE1MOmNvbS5hZG9iZS54bXAAAAAAADw/eHBhY2tldCBiZWdp
                     bj0i77u/IiBpZD0iVzVNME1wQ2VoaUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6
                     eD0iYWRvYmU6bnM6bWV0YS8iIHg6eG1wdGs9IkFkb2JlIFhNUCBDb3JlIDUuNS1jMDE0IDc5LjE1
@@ -280,7 +281,6 @@
                     Kc+/jyFrblyKCIkKbnPjSkT8HDGV5saVyBAtVHZz40Ik7HNTRtrcuBARF2tQbW5ciCR0mhvbIs2E
                     cnNjWySh29zYFGnIK25KzY1Nkdziptzc2BKJUu7Qbm5sicQom2o3NzZEKqiu/DZpbmyIjIAHNBMZ
                     7x4iTALjhcgVQSIl3v87w5vePcY/AQYAFYR6skFSqBUAAAAASUVORK5CYII=" alt="">
-
                     <div class="end-time">距离结束还有</div>
                     <div class="time-box">
                         <span class="time-num">05</span>
@@ -290,17 +290,31 @@
                         <span class="time-num">52</span>
                     </div>
                 </div>
-                <ul class="sale-list-box">
-                    <li>
-                        11
-                    </li>
-                    <li>
-                        22
-                    </li>
-                </ul>
+                <div class="sale-list-box">
+                    <ul class="sale-list-wrapper clearfix">
+                        <li class="sale-list">
+                            11
+                        </li>
+                        <li class="sale-list">
+                            22
+                        </li>
+                        <li class="sale-list">
+                            11
+                        </li>
+                        <li class="sale-list">
+                            22
+                        </li>
+                        <li class="sale-list">
+                            11
+                        </li>
+                        <li class="sale-list">
+                            22
+                        </li>
+                    </ul>
+                </div>
+
             </div>
         </div>
-
     </div>
 
 </body>
