--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -293,22 +293,70 @@
                 <div class="sale-list-box">
                     <ul class="sale-list-wrapper clearfix">
                         <li class="sale-list">
-                            11
+                            <a href="#">
+                                <img class="prod-img" src="images/shangou01.webp" alt="">
+                                <h3 class="prod-title">RedmiBook 13 i7 8G 512G SSD MX250 2G 银</h3>
+                                <div class="prod-desc">让高性能全面展现</div>
+                                <div class="prod-price">
+                                    <span class="new-price">849元</span>
+                                    <span class="old-price">899元</span>
+                                </div>
+                            </a>
                         </li>
                         <li class="sale-list">
-                            22
+                            <a href="#">
+                                <img class="prod-img" src="images/shangou02.webp" alt="">
+                                <h3 class="prod-title">RedmiBook 13 i7 8G 512G SSD MX250 2G 银</h3>
+                                <div class="prod-desc">让高性能全面展现</div>
+                                <div class="prod-price">
+                                    <span class="new-price">849元</span>
+                                    <span class="old-price">899元</span>
+                                </div>
+                            </a>
                         </li>
                         <li class="sale-list">
-                            11
+                            <a href="#">
+                                <img class="prod-img" src="images/shangou03.webp" alt="">
+                                <h3 class="prod-title">RedmiBook 13 i7 8G 512G SSD MX250 2G 银</h3>
+                                <div class="prod-desc">让高性能全面展现</div>
+                                <div class="prod-price">
+                                    <span class="new-price">849元</span>
+                                    <span class="old-price">899元</span>
+                                </div>
+                            </a>
                         </li>
                         <li class="sale-list">
-                            22
+                            <a href="#">
+                                <img class="prod-img" src="images/shangou04.webp" alt="">
+                                <h3 class="prod-title">RedmiBook 13 i7 8G 512G SSD MX250 2G 银</h3>
+                                <div class="prod-desc">让高性能全面展现</div>
+                                <div class="prod-price">
+                                    <span class="new-price">849元</span>
+                                    <span class="old-price">899元</span>
+                                </div>
+                            </a>
                         </li>
                         <li class="sale-list">
-                            11
+                            <a href="#">
+                                <img class="prod-img" src="images/shangou01.webp" alt="">
+                                <h3 class="prod-title">RedmiBook 13 i7 8G 512G SSD MX250 2G 银</h3>
+                                <div class="prod-desc">让高性能全面展现</div>
+                                <div class="prod-price">
+                                    <span class="new-price">849元</span>
+                                    <span class="old-price">899元</span>
+                                </div>
+                            </a>
                         </li>
                         <li class="sale-list">
-                            22
+                            <a href="#">
+                                <img class="prod-img" src="images/shangou01.webp" alt="">
+                                <h3 class="prod-title">RedmiBook 13 i7 8G 512G SSD MX250 2G 银</h3>
+                                <div class="prod-desc">让高性能全面展现</div>
+                                <div class="prod-price">
+                                    <span class="new-price">849元</span>
+                                    <span class="old-price">899元</span>
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
