--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -240,7 +240,7 @@
     </div>
     <!--设置背景-->
     <div class="main-content">
-        <!-- 居中 -->
+        <!-- 居中 闪购 -->
         <div class="center-box">
             <!-- 标题 -->
             <div class="sale-header-box">
@@ -361,6 +361,24 @@
                     </ul>
                 </div>
 
+            </div>
+        </div>
+        <!-- 通栏广告图 -->
+        <a href="#" class="center-box banner">
+            <img src="images/img06.webp" alt="">
+        </a>
+        <!-- 手机模块 -->
+        <div class="center-box mobile-box">
+            <div class="mobile-header">
+                <h3>手机</h3>
+            </div>
+            <div class="mobile-content clearfix">
+                <a href="#" class="mobile-content-left">
+                    <img src="images/mobile-left.webp" alt="">
+                </a>
+                <ul class="mobile-content-right">
+                    <li>111</li>
+                </ul>
             </div>
         </div>
     </div>
