--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -377,7 +377,23 @@
                     <img src="images/mobile-left.webp" alt="">
                 </a>
                 <ul class="mobile-content-right">
-                    <li>111</li>
+                    <li class="mobile-list">
+                        
+                    </li>
+                    <li class="mobile-list">
+                    </li>
+                    <li class="mobile-list">
+                    </li>
+                    <li class="mobile-list">
+                    </li>
+                    <li class="mobile-list">
+                    </li>
+                    <li class="mobile-list">
+                    </li>
+                    <li class="mobile-list">
+                    </li>
+                    <li class="mobile-list">
+                    </li>
                 </ul>
             </div>
         </div>
