--- a/xiaomi/index.html
+++ b/xiaomi/index.html
@@ -378,21 +378,68 @@
                 </a>
                 <ul class="mobile-content-right">
                     <li class="mobile-list">
-                        
+                        <img class="prod-img" src="images/mobile02.webp" alt="">
+                        <h3 class="prod-title">小米11小米11小米11小米11小米11小米11小米11</h3>
+                        <div class="prod-desc"> 
+                            骁龙888 | 2K四曲面屏
+                        </div>
+                        <div class="prod-price">3999元起</div>
                     </li>
                     <li class="mobile-list">
+                        <img class="prod-img" src="images/mobile02.webp" alt="">
+                        <h3 class="prod-title">小米11小米11小米11小米11小米11小米11小米11</h3>
+                        <div class="prod-desc"> 
+                            骁龙888 | 2K四曲面屏
+                        </div>
+                        <div class="prod-price">3999元起</div>
                     </li>
                     <li class="mobile-list">
+                        <img class="prod-img" src="images/mobile02.webp" alt="">
+                        <h3 class="prod-title">小米11小米11小米11小米11小米11小米11小米11</h3>
+                        <div class="prod-desc"> 
+                            骁龙888 | 2K四曲面屏
+                        </div>
+                        <div class="prod-price">3999元起</div>
                     </li>
                     <li class="mobile-list">
+                        <img class="prod-img" src="images/mobile02.webp" alt="">
+                        <h3 class="prod-title">小米11小米11小米11小米11小米11小米11小米11</h3>
+                        <div class="prod-desc"> 
+                            骁龙888 | 2K四曲面屏
+                        </div>
+                        <div class="prod-price">3999元起</div>
                     </li>
                     <li class="mobile-list">
+                        <img class="prod-img" src="images/mobile02.webp" alt="">
+                        <h3 class="prod-title">小米11小米11小米11小米11小米11小米11小米11</h3>
+                        <div class="prod-desc"> 
+                            骁龙888 | 2K四曲面屏
+                        </div>
+                        <div class="prod-price">3999元起</div>
                     </li>
                     <li class="mobile-list">
+                        <img class="prod-img" src="images/mobile02.webp" alt="">
+                        <h3 class="prod-title">小米11小米11小米11小米11小米11小米11小米11</h3>
+                        <div class="prod-desc"> 
+                            骁龙888 | 2K四曲面屏
+                        </div>
+                        <div class="prod-price">3999元起</div>
                     </li>
                     <li class="mobile-list">
+                        <img class="prod-img" src="images/mobile02.webp" alt="">
+                        <h3 class="prod-title">小米11小米11小米11小米11小米11小米11小米11</h3>
+                        <div class="prod-desc"> 
+                            骁龙888 | 2K四曲面屏
+                        </div>
+                        <div class="prod-price">3999元起</div>
                     </li>
                     <li class="mobile-list">
+                        <img class="prod-img" src="images/mobile02.webp" alt="">
+                        <h3 class="prod-title">小米11小米11小米11小米11小米11小米11小米11</h3>
+                        <div class="prod-desc"> 
+                            骁龙888 | 2K四曲面屏
+                        </div>
+                        <div class="prod-price">3999元起</div>
                     </li>
                 </ul>
             </div>
