--- a/js基础/2_变量运算.html
+++ b/js基础/2_变量运算.html
@@ -59,6 +59,19 @@
         // alert('hahah')
         console.log(2<4)
 
+        /*
+        &&  两个都成立
+        ||  只要有一个成立
+        ！   
+        */ 
+       //转布尔： 非空的字符串、非0的数字  即为真
+       var x = "abc"
+       console.log(!!x);
+       console.log(!'   ');  //false
+
+       console.log(typeof 123);  //"number"
+       console.log(typeof "123");  //"string"
+       console.log(typeof true);// "boolean"
 
 
 
