复习+数据类型

--- a/js基础/4_分支判断.html
+++ b/js基础/4_分支判断.html
@@ -29,7 +29,7 @@
         console.log(y)
 
         var m = 5;
-        switch (m) {
+        switch (m) {  //===
             case 1:
                 alert("m的值是1");
                 break;
