--- a/js基础/5_输入数字判断星期几.html
+++ b/js基础/5_输入数字判断星期几.html
@@ -14,7 +14,7 @@
         var num = window.prompt("请输入星期几");
         console.log(num);  //"1"
         num *= 1;
-        switch (num) {  //值和类型都相同
+        switch (num) {  //值和类型都相同 ===
             case 1:
                 console.log('星期一');
                 break;
@@ -41,7 +41,7 @@
         }
 
         //1 == "1" 值相同    1==="1" 值和类型都相同
-        if(1=== "1"){
+        if(1==="1"){
             console.log('ok')
         }
 
