--- a/js基础/2_变量运算.html
+++ b/js基础/2_变量运算.html
@@ -10,7 +10,7 @@
 <body>
     <script>
         /*
-            加 字符串+  字符串拼接
+            + 字符串+  字符串拼接
             - * / 先隐式计算 如果算不了返回NaN(not a number)
         */
         var str1 = "hello";
