--- a/js基础/12_数据类型.html
+++ b/js基础/12_数据类型.html
@@ -64,10 +64,10 @@
 
         var arr = [1, 2, 3]; //new Array()
         var obj = { name: 'zs' }  //new Object()
-        console.log(arr.constructor == Array)  //数组
-        console.log(obj.constructor == Object)  //对象
+        console.log(arr.constructor == Array)  //数组的constructor属性 ->Array
+        console.log(obj.constructor == Object)  //对象constructor ->Object
 
-        console.log( Array.isArray(obj) );
+        console.log( Array.isArray(arr) );  //判断obj参数 是否是数组
 
 
 
