--- a/js基础/练习/3-1.html
+++ b/js基础/练习/3-1.html
@@ -6,15 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-
-        var num = "123423.87";
-        console.log( Math.floor(num) );
-        console.log(Math.random())  //随机数 0-1 （包含0 不包含1）
-
-        var x;
-        
-    </script>
     
+    <script>
+        var x = Math.random();
+        var y = Math.random();
+        console.log(x,y)
+        console.log( x>y?x:y );
+
+    </script>
 </body>
 </html>
