--- a/js基础/7_函数.html
+++ b/js基础/7_函数.html
@@ -26,6 +26,7 @@
         fn();
         // function 定义的函数 有函数提升
         function fn(){
+            var a = 10;
             console.log('哈哈哈')
         }
         // function add(x,y){  //形参
