--- a/js基础/练习/5-3.html
+++ b/js基础/练习/5-3.html
@@ -36,7 +36,7 @@
                 // f1记录前两项
                 // f2记录前一项
             }
-            return temp
+            return temp;
         }
 
         console.log( fib2(6)  )
