--- a/BOM/1_document.html
+++ b/BOM/1_document.html
@@ -26,13 +26,22 @@
                     back() 加载 history 列表中的前一个 URL
                     forward() 加载 history 列表中的下一个 URL
                     go(num) 加载 history 列表中的某个具体页面
-                
-
+                Location 对象:
+                    http://www.xinhuanet.com/politics/leaders/2021-01/13/c_1126979813.htm?w=xx
+                    hash 设置或返回从井号 (#) 开始的 URL（锚）
+                    host 设置或返回主机名和当前 URL 的端口号
+                    hostname 设置或返回当前 URL 的主机名
+                    href 设置或返回完整的 URL
+                    pathname 设置或返回当前 URL 的路径部分
+                    port 设置或返回当前 URL 的端口号
+                    protocol 设置或返回当前 URL 的协议
+                    search 设置或返回从问号 (?) 开始的 URL（查询部分）
+                Navigator对象
+                    userAgent 返回由客户机发送服务器的 user-agent 头部的值
         */ 
 
         document.write('ahadasdg');
-
-
+        console.log(location.protocol)
 
     </script>
     
